Change words in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl">
+<html lang="pl"></html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -66,7 +66,7 @@
             projektów, troche z kursu, które nie są udostępinione, ale widoczne
             na <a href="https://github.com/Michal-Flis"><strong>githubie</strong></a>. Głównie
             interesuję się FrontEndem, programuję w HTML5, CSS3 i vanilla
-            JavaScript. Podejmuję sie każdego wyzwania, ponieważ dla mnie nie ma
+            JavaScript. Podeję się każdego wyzwania, ponieważ dla mnie nie ma
             rzeczy niemożliwych. Aktualnie ucze się reacta i innych
             frameworków.
           </p>
